Update DataGenerator.java